--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,12 +4,14 @@ anyio==4.12.0
 certifi==2025.11.12
 charset-normalizer==3.4.4
 click==8.3.1
+distro==1.9.0
 dnspython==2.8.0
 email-validator==2.3.0
 fastapi==0.124.4
 fastapi-cli==0.0.16
 fastapi-cloud-cli==0.6.0
 fastar==0.8.0
+groq==0.37.1
 h11==0.16.0
 httpcore==1.0.9
 httptools==0.7.1
@@ -36,6 +38,7 @@ Pygments==2.19.2
 python-dotenv==1.2.1
 python-multipart==0.0.20
 PyYAML==6.0.3
+regex==2025.11.3
 requests==2.32.5
 requests-toolbelt==1.0.0
 rich==14.2.0
@@ -43,8 +46,11 @@ rich-toolkit==0.17.0
 rignore==0.7.6
 sentry-sdk==2.47.0
 shellingham==1.5.4
+sniffio==1.3.1
 starlette==0.50.0
+tavily-python==0.7.17
 tenacity==9.1.2
+tiktoken==0.12.0
 typer==0.20.0
 typing-inspection==0.4.2
 typing_extensions==4.15.0
